--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.15",
     "tailwindcss": "^4.0.15"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zahraahmadi2025/login-page.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zahraahmadi2025/login-page/issues"
+  },
+  "homepage": "https://github.com/zahraahmadi2025/login-page#readme",
+  "description": ""
 }
